# src/main/java/com/w2w/api/employee/dto/EmployeeDetailResponse.java
@@ -19,6 +19,7 @@ public record EmployeeDetailResponse(
         Integer logonCount,
         String firstName,
         String lastName,
+        String username,
         String email,
         String employeeNumber,
         String phone,
